# malaychat

./: .gitignore  ARCHITECTURE.md  PAST_MISTAKES.md  PROGRESS.md  README.md  main.py  packages.txt  prd.md  pyproject.toml
.streamlit/: secrets.toml.example
app/: chat.py  goals.py  llm.py  model.py  tools.py  translator.py
malaychat/: auth.py  chat.py  curriculum.py  llm.py  model.py  progress.py  prompts.py  tools.py
