[project]
name = "tutor"
version = "0.1.0"
description = "MalayChat - Free Local Malay Language Learning App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "sentencepiece>=0.2.0",
    "requests>=2.31.0",
    "gspread>=6.0.0",
    "google-auth>=2.20.0",
]

[project.scripts]
malaychat = "main:main"
